@@ -4,6 +4,12 @@ Python News
 
 (editors: check NEWS.help for information about editing NEWS using ReST.)
 
+What's New in Python 2.5.4?
+===========================
+
+*Release date: XX-XXX-2009*
+
+
 What's New in Python 2.5.3?
 ===========================
 
